[gd_scene load_steps=10 format=3 uid="uid://bih7r5ubgl604"]

[ext_resource type="Texture2D" uid="uid://c7awsvhvqdq0c" path="res://GameArt/Background.png" id="1_psr37"]
[ext_resource type="Script" uid="uid://bwdmwpl6g4dqw" path="res://Scripts/main_menu.gd" id="1_uowl2"]
[ext_resource type="FontFile" uid="uid://bajqlmo0hm0fl" path="res://GameArt/Shouldve Known.otf" id="2_ermid"]
[ext_resource type="AudioStream" uid="uid://4kq1dvj4rnyq" path="res://Sounds/Minifantasy_Dungeon_Music/Music/Goblins_Den_(Regular).wav" id="4_kapqu"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gxig6"]
texture = ExtResource("1_psr37")
modulate_color = Color(0.560955, 0.560955, 0.560955, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rb4cd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d03m1"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cdj7d"]
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tay1g"]
bg_color = Color(0.478431, 0.00392157, 0.662745, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uowl2")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_gxig6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -123.0
offset_top = -99.0
offset_right = 123.0
offset_bottom = 254.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_rb4cd")
theme_override_styles/hover = SubResource("StyleBoxFlat_d03m1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_cdj7d")
theme_override_styles/normal = SubResource("StyleBoxFlat_tay1g")
text = "Start"

[node name="NewGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_rb4cd")
theme_override_styles/hover = SubResource("StyleBoxFlat_d03m1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_cdj7d")
theme_override_styles/normal = SubResource("StyleBoxFlat_tay1g")
text = "New Game"

[node name="Controls" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_rb4cd")
theme_override_styles/hover = SubResource("StyleBoxFlat_d03m1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_cdj7d")
theme_override_styles/normal = SubResource("StyleBoxFlat_tay1g")
text = "Controls"

[node name="Credits" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_rb4cd")
theme_override_styles/hover = SubResource("StyleBoxFlat_d03m1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_cdj7d")
theme_override_styles/normal = SubResource("StyleBoxFlat_tay1g")
text = "Credits"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_rb4cd")
theme_override_styles/hover = SubResource("StyleBoxFlat_d03m1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_cdj7d")
theme_override_styles/normal = SubResource("StyleBoxFlat_tay1g")
text = "Quit"

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -288.0
offset_top = -218.0
offset_right = 289.0
offset_bottom = -121.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 10
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("2_ermid")
theme_override_font_sizes/font_size = 90
text = "COLOSSAL CRISIS"

[node name="NameNYear" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -146.0
offset_top = -56.0
offset_right = 147.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 25
text = "Benjamin Scott  |  2025"

[node name="NameNYear2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -556.0
offset_top = -53.0
offset_right = -263.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 25
text = "v 1.0"

[node name="TitleTheme" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_kapqu")
volume_db = 5.0
autoplay = true

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="finished" from="TitleTheme" to="." method="_on_title_theme_finished"]
